syntax = "proto3";
package proto;
option go_package = "./;proto";

//protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative instance.proto

service InstanceService {
  rpc CreateInstance(InstanceRequest) returns (InstanceResponse){}
}

message InstanceRequest {
  string template = 1;
  string model = 2;
  string url = 3;
}
message InstanceResponse{
  string instance_id = 1;
  string instance_name = 2;
}


